# email_sender2

./: .env_template  README.md  db.sqlite3  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blog_views_alter_blog_status.py
config/: settings.py  urls.py
mailer/: admin.py  forms.py  models.py  urls.py  views.py
mailer/management/commands/: start_delivery.py
mailer/migrations/: 0001_initial.py  0002_initial.py  0003_distribution_is_active.py  0004_alter_distribution_options.py
mailer/templatetags/: template_tags.py
templates/: base.html  email_template.html  home.html
templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
templates/include/: modal.html
templates/mailer/: distribution_confirm_delete.html  distribution_form.html  distribution_list.html  message_confirm_delete.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_form.html  recipient_list.html  report_list.html
templates/registration/: login.html
templates/users/: activate.html  signed.html  signup.html
users/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username.py
